--- a/part1/index.html
+++ b/part1/index.html
@@ -7,5 +7,12 @@
 </head>
 <body>
     <h1>SHIVAPRASAD</h1>
+    <a href="part1/web001.html">web001</a>
+    <a href="part1/web002.html">web002</a>
+    <a href="part1/web003.html">web003</a>
+    <a href="part1/web004.html">web004</a>
+    <hr>
+    <h2>ASSIGNMENTS</h2>
+    <a href="assignments/A001.html">A001</a>
 </body>
 </html>
