--- a/part1/index.html
+++ b/part1/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>SHIVAPRASAD</h1>
+    <h2>HTML-CSS-JS<h2>
     <a href="part1/web001.html">web001</a>
     <a href="part1/web002.html">web002</a>
     <a href="part1/web003.html">web003</a>
