added index.html page

--- a/part1/index.html
+++ b/part1/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <legend><title>CAREERX</title></legend>
 </head>
 <body>
     <h1>SHIVAPRASAD</h1>
-    <h2>HTML-CSS-JS<h2>
+    <legend><h2>HTML-CSS-JS<h2></legend>
     <a href="part1/web001.html">web001</a>
     <a href="part1/web002.html">web002</a>
     <a href="part1/web003.html">web003</a>
@@ -15,5 +15,7 @@
     <hr>
     <h2>ASSIGNMENTS</h2>
     <a href="assignments/A001.html">A001</a>
+    <hr>
+    </body>
 </body>
 </html>
