--- a/part1/index.html
+++ b/part1/index.html
@@ -1,21 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <legend><title>CAREERX</title></legend>
-</head>
-<body>
-    <h1>SHIVAPRASAD</h1>
-    <legend><h2>HTML-CSS-JS<h2></legend>
-    <a href="part1/web001.html">web001</a>
-    <a href="part1/web002.html">web002</a>
-    <a href="part1/web003.html">web003</a>
-    <a href="part1/web004.html">web004</a>
-    <hr>
-    <h2>ASSIGNMENTS</h2>
-    <a href="assignments/A001.html">A001</a>
-    <hr>
-    </body>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>SHIVA PRASAD</title>
+  </head>
+  <body>
+    <h1>
+      SHIVA PRASAD [<a href="https://github.com/Kalalshiva">View Github</a>]
+    </h1>
+    <hr />
+    <fieldset>
+      <legend><h3>HTML-CSS-JS</h3></legend>
+      <a href="part1/web001.html">web001</a>
+      <a href="part1/web002.html">web002</a>
+      <a href="part1/web003.html">web003</a>
+      <a href="part1/web004.html">web004</a>
+      <a href="part1/web005.html">web005</a>
+      <hr />
+      <h3>Assignments</h3>
+      <a href="assignments/A001.pdf">A001</a>
+      <hr />
+      </fieldset>
+    
+
+   
+  </body>
 </html>
