--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <a href="part1/web005.html">web005</a>
       <hr />
       <h3>Assignments</h3>
-      <a href="assignments/A001.pdf">A001</a>
+      <a href="assignments/A001.html">A001</a>
       <hr />
       </fieldset>
     
