--- a/assignments/A001.html
+++ b/assignments/A001.html
@@ -19,6 +19,9 @@
                 width:150px;
                 height;40px;
                 background:red;
+                {
+                    background-color:yellow
+                }
     <center>  
         }
     </style>    
