--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
       <a href="part1/web003.html">web003</a>
       <a href="part1/web004.html">web004</a>
       <a href="part1/web005.html">web005</a>
+      <a href="part1/web006.html">web006</a>
+      <a href="part1/web007.html">web007</a>
+      <a href="part1/web008.html">web008</a>
       <hr />
       <h3>Assignments</h3>
       <a href="assignments/A001.html">A001</a>
+      <a href="assignments/A002.html">A002</a>
       <hr />
       </fieldset>
     
