--- a/assignments/A002.html
+++ b/assignments/A002.html
@@ -5,14 +5,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PROFILE PAGE</title>
     <style>
-        display:flex;
+        .container {
+            display:flex;
+        }
+            .box {
+                background-color: yellowgreen;
+                margin: 5px;
+                max-width: 200px;
+                padding:10px;
+            } 
+        .text {
+            text-align: left;
+            font-size: 20px;
+            background-color: white;
+            margin-block-start;: 30px
+            max-width: 200px;
+          padding: 10px;
+        }
+        
     </style>
 </head>
 <body>
+    <h1>MY PROFILE</h1>
     <fieldset>
         <fieldset>
-            <img src="https://picsum.photos/id/143/300/300 /">
+        <div class="container">
+            <div class="box">
+            <img src="https://picsum.photos/id/237/200/200">
+        </div>
+        <div class="text">
+            <pre>
+                <b>
+                   DOG
+            I AM A PET ANIMAL
+            I WILL BE MORE FAITHFUL
+                    </b>
+            </pre>
         </fieldset>
     </fieldset>
+    <br>
+        <br>
+    <fieldset>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nisl purus in mollis nunc sed id semper. Duis at tellus at urna condimentum mattis pellentesque id. Mollis nunc sed id semper risus in hendrerit gravida rutrum. Sit amet cursus sit amet dictum sit amet justo donec. Mauris commodo quis imperdiet massa. Ipsum suspendisse ultrices gravida dictum fusce. Pharetra convallis posuere morbi leo. Magnis dis parturient montes nascetur ridiculus. Risus in hendrerit gravida rutrum quisque non tellus. Elementum tempus egestas sed sed risus pretium quam. Gravida dictum fusce ut placerat. Porttitor rhoncus dolor purus non enim praesent elementum facilisis. Suspendisse interdum consectetur libero id. Quis enim lobortis scelerisque fermentum dui faucibus. Adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus urna. Tincidunt eget nullam non nisi est. Commodo ullamcorper a lacus vestibulum. Imperdiet nulla malesuada pellentesque elit eget gravida cum sociis. Vel risus commodo viverra maecenas.<p>
+    </fieldset>
+    <br>
+    <br>
+    <fieldset>
+        <fieldset>
+            <div class="container">
+                <div class="box">
+                <img src="https://picsum.photos/id/75/200/200">
+                </div>
+                <div class="text">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Id eu nisl nunc mi ipsum faucibus. Nulla pharetra diam sit amet nisl suscipit adipiscing bibendum est. Vitae purus faucibus ornare suspendisse sed nisi lacus sed. A arcu cursus vitae congue mauris rhoncus aenean vel elit. Augue lacus viverra vitae congue eu. Cursus sit amet dictum sit amet justo. Hendrerit dolor magna eget est lorem ipsum dolor sit. Elementum sagittis vitae et leo duis ut diam quam. Non odio euismod lacinia at quis risus sed vulputate.</p>
+                </div>
+
+        </fieldset>
+    </fieldset>
+
 </body>
 </html>
