--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <h3>Assignments</h3>
       <a href="assignments/A001.html">A001</a>
       <a href="assignments/A002.html">A002</a>
+      <a href="assignments/A003.html">A003</a>
       <hr />
       </fieldset>
     
