--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
       <a href="part1/web006.html">web006</a>
       <a href="part1/web007.html">web007</a>
       <a href="part1/web008.html">web008</a>
+      <a href="part1/web009.html">web009</a>
+      <a href="part1/web010.html">web010</a>
+      <a href="part1/web011.html">web011</a>
+      <a href="part1/web012.html">web012</a>
+      <a href="part1/web013.html">web013</a>
+      <a href="part1/web014.html">web014</a>
+
       <hr />
       <h3>Assignments</h3>
       <a href="assignments/A001.html">A001</a>
