--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
       <a href="part1/web012.html">web012</a>
       <a href="part1/web013.html">web013</a>
       <a href="part1/web014.html">web014</a>
+      <a href="part1/web015.html">web015</a>
+      <a href="part1/web016.html">web016</a>
+      <a href="part1/web017.html">web017</a>
+      <a href="part1/web018.html">web018</a>
 
       <hr />
       <h3>Assignments</h3>
