--- a/index.html
+++ b/index.html
@@ -30,6 +30,18 @@
       <a href="part1/web016.html">web016</a>
       <a href="part1/web017.html">web017</a>
       <a href="part1/web018.html">web018</a>
+      <a href="part1/web019.html">web019</a>
+      <a href="part1/web020.html">web020</a>
+      <a href="part1/web021.html">web021</a>
+      <a href="part1/web022.html">web022</a>
+      <a href="part1/web023.html">web023</a>
+      <a href="part2/web024.html">web024</a>
+      <a href="part2/web025.html">web018</a>
+      <a href="part2/web026.html">web026</a>
+      <a href="part2/web027.html">web027</a>
+      <a href="part2/web028.html">web028</a>
+      <a href="part2/web029.html">web029</a>
+      <a href="part2/web030.html">web030</a>
 
       <hr />
       <h3>Assignments</h3>
