--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
       <a href="part2/web028.html">web028</a>
       <a href="part2/web029.html">web029</a>
       <a href="part2/web030.html">web030</a>
+      <a href="part2/web031.html">web031</a>
+      <a href="part2/web032.html">web032</a>
 
       <hr />
       <h3>Assignments</h3>
