--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
       <a href="part2/web030.html">web030</a>
       <a href="part2/web031.html">web031</a>
       <a href="part2/web032.html">web032</a>
+      <a href="part3/web033.html">web033</a>
+      <a href="part3/web034.html">web034</a>
+      <a href="part3/web035.html">web035</a>
+      <a href="part3/web036.html">web036</a>
 
       <hr />
       <h3>Assignments</h3>
