--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
       <a href="assignments/A001.html">A001</a>
       <a href="assignments/A002.html">A002</a>
       <a href="assignments/A003.html">A003</a>
+      <a href="assignments/A004.html">A004</a>
       <hr />
       </fieldset>
     
