--- a/assignments/A004.html
+++ b/assignments/A004.html
@@ -24,7 +24,7 @@
     .container {
       height: auto;
       width: 500px;
-      background-color: rgb(139, 211, 255);
+      background-color: white;
       padding: 20px;
       border: 1px solid #000;
       border-radius: 10px;
@@ -33,7 +33,7 @@
     h1 {
       text-align: center;
       margin-bottom: 20px;
-      color: darkblue;
+      color: black;
     }
 
     form {
