--- a/assignments/A004.html
+++ b/assignments/A004.html
@@ -17,7 +17,7 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
-      background-image:url("/assignments/IRCTC.webp");
+      background-image:url("/assignments/IRCTC.png");
       background-size: cover;
      
     }
@@ -152,13 +152,13 @@
       align-items: center;
       justify-content: space-between;
       margin-top: 20px;
-      padding: 0 20px;
+      padding: 20px;
     }
     .btns input[type="submit"] {
       padding: 10px 20px;
       font-weight: bold;
-      background-color: orange;
-      color: #fff;
+      background-color: yellow;
+      color: black;
       border: none;
       border-radius: 5px;
       cursor: pointer;
@@ -166,8 +166,8 @@
     .btns button {
       padding: 10px 20px;
       font-weight: bold;
-      background-color: green;
-      color: #fff;
+      background-color: greenyellow;
+      color: black;
       border: none;
       border-radius: 5px;
       cursor: pointer;
