--- a/assignments/A004.html
+++ b/assignments/A004.html
@@ -17,7 +17,7 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
-      background-image:url("/assignments/IRCTC.png");
+      background-image:url("IRCTC.png");
       background-size: cover;
      
     }
