--- a/part1/web019.html
+++ b/part1/web019.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <img src="/part1/india.jpg" usemap="#m1" />
+    <img src="india.jpg" usemap="#m1" />
     <map name="m1">
         <area shape="poly" 
         coords="30,200,100,140,170,200,100,270"
