--- a/part1/web020.html
+++ b/part1/web020.html
@@ -11,7 +11,7 @@
         <source media="(min-width:1100px)" srcset="/part1/images.jpg">
         <source media="(min-width:900px)" srcset="/part1/image.jpg">
         <source media="(min-width:700px)" srcset="/part1/images.jpg">
-        <img src="/part1/image.jpg" width="1000px">
+        <img src="image.jpg" width="1000px">
     </picture>
 </body>
 </html>
