--- a/part1/web021.html
+++ b/part1/web021.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <audio controls>
-      <source src="/part1/audio.mp3" type="audio/mpeg" />
+      <source src="audio.mp3" type="audio/mpeg" />
     </audio>
   </body>
 </html>
