--- a/part1/web023.html
+++ b/part1/web023.html
@@ -10,7 +10,7 @@
         SHIVA
     </marquee>
     <marquee>
-        <img src="../part1/image.jpg" width="100px">
+        <img src="image.jpg" width="100px">
     </marquee>
 </body>
 </html>
