--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
       <a href="part3/web034.html">web034</a>
       <a href="part3/web035.html">web035</a>
       <a href="part3/web036.html">web036</a>
+      <a href="part3/web037.html">web037</a>
+      <a href="part4/web038.html">web038</a>
+      <a href="part4/web039.html">web039</a>
+      <a href="part4/web040.html">web040</a>
+      <a href="part4/web041.html">web041</a>
+
 
       <hr />
       <h3>Assignments</h3>
