--- a/index.html
+++ b/index.html
@@ -53,6 +53,16 @@
       <a href="part4/web039.html">web039</a>
       <a href="part4/web040.html">web040</a>
       <a href="part4/web041.html">web041</a>
+      <a href="part4/web042.html">web042</a>
+      <a href="part4/web043.html">web043</a>
+      <a href="part4/web044.html">web044</a>
+      <a href="part4/web045.html">web045</a>
+      <a href="part4/web046.html">web046</a>
+      <a href="part4/web047.html">web047</a>
+      <a href="part4/web048.html">web048</a>
+      <a href="part4/web049.html">web049</a>
+    
+     
 
 
       <hr />
