--- a/index.html
+++ b/index.html
@@ -73,6 +73,16 @@
       <a href="assignments/A004.html">A004</a>
       <a href="assignments/A005.html">A005</a>
       <a href="assignments/A006.html">A006</a>
+      <a href="assignments/A007.1.html">A007.1</a>
+      <a href="assignments/A007.2.html">A007.2</a>
+      <a href="assignments/A007.3.html">A007.3</a>
+      <a href="assignments/A007.4.html">A007.4</a>
+      <a href="assignments/A007.5.html">A007.5</a>
+      <a href="assignments/A007.6.html">A007.6</a>
+      <a href="assignments/A007.7.html">A007.7</a>
+      <a href="assignments/A007.8.html">A007.8</a>
+      <a href="assignments/A008.html">A008</a>
+
       <hr />
       </fieldset>
     
