--- a/part4/web046.html
+++ b/part4/web046.html
@@ -8,12 +8,12 @@
   </head>
   <body>
     <script>
-      for (let i = 1; i <= 5; i++) {
-        if (i === 3) {
-          break;
-        }
-        document.write(i);
-      }
+      //for (let i = 1; i <= 5; i++) {
+        //if (i === 3) {
+          //break;
+        //}
+        //document.write(i);
+      //}
 
       ////////////////////////////
       // for (let i=1;i<=5;i++){
