--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
       <a href="part4/web047.html">web047</a>
       <a href="part4/web048.html">web048</a>
       <a href="part4/web049.html">web049</a>
+      <a href="part5/web050.html">web050</a>
+      <a href="part5/web051.html">web051</a>
+      <a href="part5/web052.html">web052</a>
+      <a href="part5/web053.html">web053</a>
+      <a href="part5/web054.html">web054</a>
     
      
 
