--- a/index.html
+++ b/index.html
@@ -66,10 +66,11 @@
       <a href="part5/web052.html">web052</a>
       <a href="part5/web053.html">web053</a>
       <a href="part5/web054.html">web054</a>
+      <a href="part5/web055.html">web055</a>
+      <a href="part5/web056.html">web056</a>
+      <a href="part5/web057.html">web057</a>
+      <a href="part5/web058.html">web058</a>
     
-     
-
-
       <hr />
       <h3>Assignments</h3>
       <a href="assignments/A001.html">A001</a>
