--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <hr />
     <fieldset>
       <legend><h3>HTML-CSS-JS</h3></legend>
+      <legend><h3>HTML-CSS-Lessons</h3></legend>
       <a href="part1/web001.html">web001</a>
       <a href="part1/web002.html">web002</a>
       <a href="part1/web003.html">web003</a>
@@ -49,6 +50,8 @@
       <a href="part3/web035.html">web035</a>
       <a href="part3/web036.html">web036</a>
       <a href="part3/web037.html">web037</a>
+      <hr>
+      <legend><h3>JavaScript-Lessons</h3></legend>
       <a href="part4/web038.html">web038</a>
       <a href="part4/web039.html">web039</a>
       <a href="part4/web040.html">web040</a>
