--- a/index.html
+++ b/index.html
@@ -73,6 +73,13 @@
       <a href="part5/web056.html">web056</a>
       <a href="part5/web057.html">web057</a>
       <a href="part5/web058.html">web058</a>
+      <a href="part5/web059.html">web059</a>
+      <a href="part5/web060.html">web060</a>
+      <a href="part5/web061.html">web061</a>
+      <a href="part5/web062.html">web062</a>
+      <a href="part5/web063.html">web063</a>
+      <a href="part5/web064.html">web064</a>
+      <a href="part5/web065.html">web065</a>
     
       <hr />
       <h3>Assignments</h3>
