--- a/index.html
+++ b/index.html
@@ -80,6 +80,16 @@
       <a href="part5/web063.html">web063</a>
       <a href="part5/web064.html">web064</a>
       <a href="part5/web065.html">web065</a>
+      <a href="part6/web066.html">web066</a>
+      <a href="part6/web067.html">web067</a>
+      <a href="part6/web068.html">web068</a>
+      <a href="part6/web069.html">web069</a>
+      <a href="part6/web070.html">web070</a>
+      <a href="part6/web071.html">web071</a>
+      <a href="part6/web072.html">web072</a>
+      <a href="part6/web073.html">web073</a>
+      <a href="part6/web065.html">web065</a>
+      <a href="part6/web065.html">web065</a> 
     
       <hr />
       <h3>Assignments</h3>
