--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
       <a href="assignments/A007.7.html">A007.7</a>
       <a href="assignments/A007.8.html">A007.8</a>
       <a href="assignments/A008.html">A008</a>
+      <a href="assignments/Assignment9.html">Assignment9</a>
 
       <hr />
       </fieldset>
