--- a/part11/web136.html
+++ b/part11/web136.html
@@ -20,7 +20,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-4 card" style="width: 400px">
-          <img class="card-img-top" src="/images/1.PNG" alt="Card image" />
+          <img class="card-img-top" src="/assignments/1.png" alt="Card image" />
           <div class="card-body">
             <h4 class="card-title">Product 1</h4>
             <p class="card-text">
