--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <a href="part3/web036.html">web036</a>
       <a href="part3/web037.html">web037</a>
       
-      <legend><h3>JavaScript-Lessons</h3></legend>
+      <legend>JavaScript-Lessons</legend>
       <a href="part4/web038.html">web038</a>
       <a href="part4/web039.html">web039</a>
       <a href="part4/web040.html">web040</a>
@@ -126,7 +126,7 @@
       <a href="part9/web109.html">web109</a> 
       <a href="part9/web110.html">web110</a>
       <fieldset>
-      <legend><h3>OPPS Concept</h3></legend>
+      <legend>OPPS Concept</legend>
       <a href="part9/web111.html">web111</a> 
       <a href="part9/web112.html">web112</a>
       <a href="part9/web113.html">web113</a>
@@ -143,14 +143,14 @@
       <a href="part10/web124.html">web124</a>
       <a href="part10/web125.html">web125</a>
       <fieldset>
-      <legend><h3>JS Chart-Libraries</h3></legend>
+      <legend>JS Chart-Libraries</legend>
       <a href="part10/web126.html">web126</a>
       <a href="part10/web127.html">web127</a>
       <a href="part10/web128.html">web128</a>
       <a href="part10/web129.html">web129</a>
       </fieldset>
       <fieldset>
-      <legend><h3>Bootstrap</h3></legend>
+      <legend>Bootstrap</legend>
       <a href="part11/web130.html">web130</a>
       <a href="part11/web131.html">web131</a>
       <a href="part11/web132.html">web132</a>
