--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     </h1>
     <hr />
     <fieldset>
+      
       <legend><h3>HTML-CSS-JS</h3></legend>
+      <fieldset>
       <legend><h3>HTML-CSS-Lessons</h3></legend>
       <a href="part1/web001.html">web001</a>
       <a href="part1/web002.html">web002</a>
@@ -51,6 +53,7 @@
       <a href="part3/web036.html">web036</a>
       <a href="part3/web037.html">web037</a>
       
+      </fieldset>
       <legend>JavaScript-Lessons</legend>
       <a href="part4/web038.html">web038</a>
       <a href="part4/web039.html">web039</a>
